# 1labMethodySpecificasii

./: .gitignore  SysProg1.sln
SysProg1/: CMakeLists.txt  Lexer.cpp  Lexer.h  LexerTests.cpp  SysProg1.cpp  SysProg1.vcxproj  SysProg1.vcxproj.filters  main.cpp  test.runsettings
SysProg1/x64/Debug/: SysProg1.exe.recipe  SysProg1.ilk  vc143.idb
SysProg1/x64/Debug/SysProg1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  SysProg1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
